responsive multi-lang fixed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,7 +106,7 @@
                     <a id="select-russian">Russian</a>
                 {% endif %}
             </div>
-        </div>
+          </div>
         
         <form id="lang-form" action="{% url 'set_language' %}" method="post" style="display: none;">
             {% csrf_token %}
@@ -180,28 +180,39 @@
                 <div class="openmenu-divider-outside"></div>
               </li>
             </ul>
+
+
             <div class="responsive-multilanguage">
               <div class="d-flex justify-content-around">
-                <div>
-                  <i class="flag-icon flag-icon-gb"></i>
-                  English
-                </div>
-                <div>
-                  <i class="flag-icon flag-icon-ru"></i>
-                  Russian
-                </div>
+                  <div id="responsive-english">
+                      <i class="flag-icon flag-icon-gb"></i>
+                      English
+                  </div>
+                  <div id="responsive-russian">
+                      <i class="flag-icon flag-icon-ru"></i>
+                      Russian
+                  </div>
               </div>
-            </div>
+          </div>
+          
+
+
             <div class="responsive-openmenu-icons">
-              <a href="#">
+              {% for social in socials %}
+                {% if social.platform == 'facebook' %}
+            <a href="{{ social.link }}">
                 <i class="fa-brands fa-facebook-f"></i>
-              </a>
-              <a href="#">
+            </a>
+                {% elif social.platform == 'instagram' %}
+            <a href="{{ social.link }}">
                 <i class="fa-brands fa-instagram"></i>
-              </a>
-              <a href="#">
+            </a>
+                {% elif social.platform == 'tiktok' %}
+            <a href="{{ social.link }}">
                 <i class="fa-brands fa-tiktok"></i>
-              </a>
+            </a>
+            {% endif %}
+            {% endfor %}
             </div>
           </div>
         </div>
