text issues fixed

--- a/static/styles/_faq.scss
+++ b/static/styles/_faq.scss
@@ -22,6 +22,8 @@
     a {
       text-decoration: none;
       color: white;
+      text-align: center;
+      display: inline-block;
     }
   }
 }
