--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -569,8 +569,11 @@ header .responsive-openmenu .responsive-openmenu-icons a i {
     height: 600px;
   }
 }
+#who-we-are .custom-container .rightbox {
+  margin-top: 15px;
+}
 #who-we-are .custom-container .rightbox p {
-  font-size: 13px;
+  font-size: 14px;
 }
 @media (min-width: 1600px) {
   #who-we-are .custom-container .rightbox p {
@@ -579,6 +582,7 @@ header .responsive-openmenu .responsive-openmenu-icons a i {
 }
 #who-we-are .custom-container .rightbox h6 {
   color: #1a2b48;
+  font-size: 14px;
 }
 #who-we-are .custom-container .rightbox .fa-circle-check {
   font-size: 20px;
@@ -587,6 +591,11 @@ header .responsive-openmenu .responsive-openmenu-icons a i {
 #who-we-are .custom-container .rightbox h4 {
   color: #1a2b48;
   padding: 10px 0px;
+}
+@media (min-width: 1600px) {
+  #who-we-are .custom-container .rightbox h4 {
+    font-size: 28px;
+  }
 }
 #who-we-are .custom-container .rightbox .button {
   cursor: pointer;
