--- a/templates/layout.html
+++ b/templates/layout.html
@@ -254,7 +254,7 @@
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     {% elif social.platform == 'instagram' %}
-                        <a href="{{ social.link }}" style="padding: 0px 15px">
+                        <a href="{{ social.link }}">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     {% elif social.platform == 'tiktok' %}
