--- a/promotion/templates/faq.html
+++ b/promotion/templates/faq.html
@@ -18,7 +18,7 @@
   <section id="faq-upper">
     <img src="{% static "assets/faq-upper-bg.jpg" %}" alt="" />
     <div class="content">
-      <h1>FAQ</h1>
+      <h1>{% trans "FAQ" %}</h1>
     </div>
     <div class="links">
       <a href="{% url 'promotion:faq' %}">{% trans "Frequently Asked Questions" %}</a>
