--- a/promotion/templates/index.html
+++ b/promotion/templates/index.html
@@ -120,7 +120,9 @@
                             {% for value, label in fleetform.car_class.field.choices %}
                                 <li data-value="{{ value }}">
                                     {{ label }}
-                                    <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                                    {% if value != 'any' %}
+                                      <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                                    {% endif %}
                                 </li>
                             {% endfor %}
                         </ul>
@@ -131,53 +133,59 @@
                     </div>
                   </div>
 
-          
-              <!-- Flight Number -->
-              <div class="form-group">
-                  <div class="d-flex">
-                      <label for="{{ fleetform.flight_number.id_for_label }}">{% trans "Flight number" %}</label>
-                      <i class="fa-solid fa-plane-arrival"></i>
+                  <div class="toggle-btn d-flex justify-content-center">
+                    <button type="button" class="btn btn-success">
+                      {% trans "More details" %} <i class="fa-solid fa-chevron-down"></i>
+                    </button>
                   </div>
-                  {{ fleetform.flight_number }}
-              </div>
           
-              <!-- Additional Request -->
+              <div class="hiddeninputs">
+                   <!-- Flight Number -->
               <div class="form-group">
-                  <div class="d-flex">
-                      <label for="{{ fleetform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
-                      <i class="fa-solid fa-bell-concierge"></i>
-                  </div>
-                  {{ fleetform.additional_request }}
-              </div>
-          
-              <!-- Full Name -->
-              <div class="form-group">
+                <div class="d-flex">
+                    <label for="{{ fleetform.flight_number.id_for_label }}">{% trans "Flight number" %}</label>
+                    <i class="fa-solid fa-plane-arrival"></i>
+                </div>
+                {{ fleetform.flight_number }}
+            </div>
+        
+            <!-- Additional Request -->
+            <div class="form-group">
+                <div class="d-flex">
+                    <label for="{{ fleetform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
+                    <i class="fa-solid fa-bell-concierge"></i>
+                </div>
+                {{ fleetform.additional_request }}
+            </div>
+
+                 <!-- Full Name -->
+                 <div class="form-group">
                   <div class="d-flex">
                       <label for="{{ fleetform.full_name.id_for_label }}">{% trans "Full name*" %}</label>
                       <i class="fa-solid fa-marker"></i>
                   </div>
                   {{ fleetform.full_name }}
-              </div>
-          
-              <!-- Email -->
-              <div class="form-group">
+                </div>
+
+                <!-- Email -->
+                <div class="form-group">
                   <div class="d-flex">
                       <label for="{{ fleetform.email.id_for_label }}">{% trans "Email*" %}</label>
                       <i class="fa-solid fa-envelope"></i>
                   </div>
                   {{ fleetform.email }}
-              </div>
-          
-              <!-- Phone -->
-              <div class="form-group">
+                </div>
+
+                <!-- Phone -->
+                <div class="form-group">
                   <div class="d-flex">
                       <label for="{{ fleetform.phone.id_for_label }}">{% trans "Cell Phone*" %}</label>
                       <i class="fa-solid fa-phone"></i>
                   </div>
                   {{ fleetform.phone }}
+                </div>
+                <button class="btn btn-success" type="submit" name="fleet_submit" value="submit">{% trans "Submit" %}</button>
               </div>
-          
-              <button class="btn btn-success" type="submit" name="fleet_submit" value="submit">{% trans "Submit" %}</button>
           </form>
           
           <form class="transfers-form" action="{% url 'promotion:submit_tour_form' %}" method="post">
@@ -250,7 +258,9 @@
                         {% for value, label in tourform.car_class.field.choices %}
                             <li data-value="{{ value }}">
                                 {{ label }}
-                                <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                                {% if value != 'any' %}
+                                      <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                                {% endif %}
                             </li>
                         {% endfor %}
                     </ul>
@@ -260,44 +270,48 @@
                     </div>
                 </div>
             </div>
-        
-            <!-- Additional Request -->
-            <div class="form-group">
-                <div class="d-flex">
-                    <label for="{{ tourform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
-                    <i class="fa-solid fa-bell-concierge"></i>
-                </div>
-                {{ tourform.additional_request }}
+            <div class="toggle-btn d-flex justify-content-center">
+              <button type="button" class="btn btn-success">
+                {% trans "More details" %} <i class="fa-solid fa-chevron-down"></i>
+              </button>
             </div>
-        
-            <!-- Full Name -->
+            <div class="hiddeninputs">
+                <!-- Additional Request -->
             <div class="form-group">
-                <div class="d-flex">
-                    <label for="{{ tourform.full_name.id_for_label }}">{% trans "Full name*" %}</label>
-                    <i class="fa-solid fa-marker"></i>
-                </div>
-                {{ tourform.full_name }}
+              <div class="d-flex">
+                  <label for="{{ tourform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
+                  <i class="fa-solid fa-bell-concierge"></i>
+              </div>
+              {{ tourform.additional_request }}
+          </div>
+              <!-- Full Name -->
+              <div class="form-group">
+                  <div class="d-flex">
+                      <label for="{{ tourform.full_name.id_for_label }}">{% trans "Full name*" %}</label>
+                      <i class="fa-solid fa-marker"></i>
+                  </div>
+                  {{ tourform.full_name }}
+              </div>
+          
+              <!-- Email -->
+              <div class="form-group">
+                  <div class="d-flex">
+                      <label for="{{ tourform.email.id_for_label }}">{% trans "Email*" %}</label>
+                      <i class="fa-solid fa-envelope"></i>
+                  </div>
+                  {{ tourform.email }}
+              </div>
+          
+              <!-- Phone -->
+              <div class="form-group">
+                  <div class="d-flex">
+                      <label for="{{ tourform.phone.id_for_label }}">{% trans "Cell Phone*" %}</label>
+                      <i class="fa-solid fa-phone"></i>
+                  </div>
+                  {{ tourform.phone }}
+              </div>
+              <button class="btn btn-success" type="submit" name="tour_submit" value="submit">{% trans "Submit" %}</button>
             </div>
-        
-            <!-- Email -->
-            <div class="form-group">
-                <div class="d-flex">
-                    <label for="{{ tourform.email.id_for_label }}">{% trans "Email*" %}</label>
-                    <i class="fa-solid fa-envelope"></i>
-                </div>
-                {{ tourform.email }}
-            </div>
-        
-            <!-- Phone -->
-            <div class="form-group">
-                <div class="d-flex">
-                    <label for="{{ tourform.phone.id_for_label }}">{% trans "Cell Phone*" %}</label>
-                    <i class="fa-solid fa-phone"></i>
-                </div>
-                {{ tourform.phone }}
-            </div>
-        
-            <button class="btn btn-success" type="submit" name="tour_submit" value="submit">{% trans "Submit" %}</button>
           </form>
           </div>
         </div>
@@ -397,7 +411,9 @@
                       {% for value, label in fleetform.car_class.field.choices %}
                       <li data-value="{{ value }}">
                           {{ label }}
-                          <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                          {% if value != 'any' %}
+                            <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                          {% endif %}
                       </li>
                       {% endfor %}
                   </ul>
@@ -407,53 +423,58 @@
                   </div>
               </div>
           </div>
-      
-          <!-- Flight Number -->
-          <div class="form-group">
-              <div class="d-flex">
-                  <label for="{{ fleetform.flight_number.id_for_label }}">{% trans "Flight number" %}</label>
-                  <i class="fa-solid fa-plane-arrival"></i>
-              </div>
-              {{ fleetform.flight_number }}
+          <div class="toggle-btn d-flex justify-content-center">
+            <button type="button" class="btn btn-success">
+              {% trans "More details" %} <i class="fa-solid fa-chevron-down"></i>
+            </button>
           </div>
-      
-          <!-- Additional Request -->
+          <div class="hiddeninputs">
+            <!-- Flight Number -->
           <div class="form-group">
-              <div class="d-flex">
-                  <label for="{{ fleetform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
-                  <i class="fa-solid fa-bell-concierge"></i>
-              </div>
-              {{ fleetform.additional_request }}
+            <div class="d-flex">
+                <label for="{{ fleetform.flight_number.id_for_label }}">{% trans "Flight number" %}</label>
+                <i class="fa-solid fa-plane-arrival"></i>
+            </div>
+            {{ fleetform.flight_number }}
+        </div>
+    
+        <!-- Additional Request -->
+        <div class="form-group">
+            <div class="d-flex">
+                <label for="{{ fleetform.additional_request.id_for_label }}">{% trans "Additional request" %}</label>
+                <i class="fa-solid fa-bell-concierge"></i>
+            </div>
+            {{ fleetform.additional_request }}
+        </div>
+            <!-- Full Name -->
+            <div class="form-group">
+                <div class="d-flex">
+                    <label for="{{ fleetform.full_name.id_for_label }}">{% trans "Full name*" %}</label>
+                    <i class="fa-solid fa-marker"></i>
+                </div>
+                {{ fleetform.full_name }}
+            </div>
+
+            <!-- Email -->
+            <div class="form-group">
+                <div class="d-flex">
+                    <label for="{{ fleetform.email.id_for_label }}">{% trans "Email*" %}</label>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+                {{ fleetform.email }}
+            </div>
+
+            <!-- Phone -->
+            <div class="form-group">
+                <div class="d-flex">
+                    <label for="{{ fleetform.phone.id_for_label }}">{% trans "Cell Phone*" %}</label>
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                {{ fleetform.phone }}
+            </div>
+
+            <button class="btn btn-success" type="submit" name="fleet_submit" value="submit">{% trans "Submit" %}</button>
           </div>
-      
-          <!-- Full Name -->
-          <div class="form-group">
-              <div class="d-flex">
-                  <label for="{{ fleetform.full_name.id_for_label }}">{% trans "Full name*" %}</label>
-                  <i class="fa-solid fa-marker"></i>
-              </div>
-              {{ fleetform.full_name }}
-          </div>
-      
-          <!-- Email -->
-          <div class="form-group">
-              <div class="d-flex">
-                  <label for="{{ fleetform.email.id_for_label }}">{% trans "Email*" %}</label>
-                  <i class="fa-solid fa-envelope"></i>
-              </div>
-              {{ fleetform.email }}
-          </div>
-      
-          <!-- Phone -->
-          <div class="form-group">
-              <div class="d-flex">
-                  <label for="{{ fleetform.phone.id_for_label }}">{% trans "Cell Phone*" %}</label>
-                  <i class="fa-solid fa-phone"></i>
-              </div>
-              {{ fleetform.phone }}
-          </div>
-      
-          <button class="btn btn-success" type="submit" name="fleet_submit" value="submit">{% trans "Submit" %}</button>
       </form>
 
       <form class="transfers-form" action="{% url 'promotion:submit_tour_form' %}" method="post">
@@ -526,7 +547,9 @@
                   {% for value, label in tourform.car_class.field.choices %}
                   <li data-value="{{ value }}">
                       {{ label }}
-                      <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                      {% if value != 'any' %}
+                        <img src="{% static 'assets/'|add:value|add:'.png' %}" alt="{{ label }} Icon" />
+                      {% endif %}
                   </li>
                   {% endfor %}
               </ul>
@@ -536,7 +559,14 @@
               </div>
           </div>
         </div>
-    
+
+      <div class="toggle-btn d-flex justify-content-center">
+        <button type="button" class="btn btn-success">
+          {% trans "More details" %} <i class="fa-solid fa-chevron-down"></i>
+        </button>
+      </div>
+
+      <div class="hiddeninputs">
         <!-- Additional Request -->
         <div class="form-group">
           <div class="d-flex">
@@ -545,7 +575,6 @@
           </div>
           {{ tourform.additional_request }}
       </div>
-    
         <!-- Full Name -->
         <div class="form-group">
           <div class="d-flex">
@@ -572,8 +601,8 @@
           </div>
           {{ tourform.phone }}
       </div>
-    
-        <button class="btn btn-success" type="submit" name="tour_submit" value="submit">{% trans "Submit" %}</button>
+          <button class="btn btn-success" type="submit" name="tour_submit" value="submit">{% trans "Submit" %}</button>
+      </div>
      </form>
       </div>
     </div>
@@ -674,7 +703,7 @@
                   <i class="fa-brands fa-pagelines"></i>
                   <p>
                      {% trans " Get Updates & More" %}<br />
-                      <span>{% trans "Bütün yeniliklərdən xəbərdar olun" %}</span>
+                      <span>{% trans "Stay up-to-date with all the latest news" %}</span>
                   </p>
               </div>
           </div>
