need help translation fixed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -228,7 +228,7 @@
         <div class="container">
           <div class="row row-gap-5">
             <div class="col-lg-6 col-sm-12">
-              <h6>Need help?</h6>
+              <h6>{% trans "Need help?" %}</h6>
               <div class="call">
                 {% for info in infos %}
                 {% if info.type == 'number' %}
