--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,10 +40,10 @@
                       <i class="fa-brands fa-whatsapp"></i>
                   </a>
               </div>
-          {% elif social.platform == 'wechat' %}
-              <div class="button">
+          {% elif social.platform == 'instagram' %}
+              <div class="button instagradient">
                   <a href="{{ social.link }}" target="_blank">
-                      <i class="fa-brands fa-weixin"></i>
+                      <i class="fa-brands fa-instagram"></i>
                   </a>
               </div>
           {% endif %}
