--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -33,7 +33,7 @@
     <div class="custom-container">
         <div class="row row-gap-5">
             {% for car in cars %}
-            <div class="col-4 col-lg-3">
+            <div class="col-6 col-md-4 col-lg-3">
                 <div class="car-box">
                     <img src="{{ car.image.url }}" alt="{{ car.name }}" />
                     {% for price in car.prices.all %}
