--- a/static/styles/_home.scss
+++ b/static/styles/_home.scss
@@ -33,6 +33,9 @@
       }
     }
   }
+  .instagradient{
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  }
 }
 
 #startline {
