instagram direct link added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
                       <i class="fa-brands fa-whatsapp"></i>
                   </a>
               </div>
-          {% elif social.platform == 'instagram' %}
+          {% elif social.platform == 'wechat' %}
               <div class="button instagradient">
                   <a href="{{ social.link }}" target="_blank">
                       <i class="fa-brands fa-instagram"></i>
