--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,6 +29,8 @@
     />
     <link rel="stylesheet" href="{% static "vendors/bootstrap.min.css" %}" />
     <link rel="stylesheet" href="{% static "styles/style.css" %}" />
+    <link rel="icon" href="{% static "assets/favicon-32x32.png" %}" type="image/x-icon">
+    {% block meta_tags %}{% endblock meta_tags %}
     {% block title %}{% endblock title %}
   </head>
   <body>
