style issues fixed at tour page

--- a/static/styles/_tours.scss
+++ b/static/styles/_tours.scss
@@ -39,6 +39,7 @@
       select {
         outline: none;
         border-radius: 5px;
+        width: 100px;
       }
 
       button {
@@ -98,7 +99,7 @@
 
       .swiper-pagination {
         position: absolute;
-        top: 57%;
+        bottom: 3%;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -107,7 +108,7 @@
         .swiper-pagination-bullet {
           width: 10px;
           height: 10px;
-          background-color: white;
+          background-color: gray;
           border-radius: 50%;
           opacity: 0.8;
           transition: background-color 0.2s ease-in-out;
@@ -122,16 +123,15 @@
       .swiper-button-prev,
       .swiper-button-next {
         position: absolute;
-        top: 43%;
-        transform: translateY(-50%);
-        width: 30px;
-        height: 30px;
+        top: 50%;
+        width: 32px;
+        height: 32px;
         color: white;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 16px;
+        font-size: 20px;
         transition: background-color 0.2s ease-in-out;
         background-color: rgba(0, 0, 0, 0.5);
         &:hover {
