--- a/static/styles/_fleet.scss
+++ b/static/styles/_fleet.scss
@@ -12,8 +12,10 @@
     left: 50%;
     color: white;
     transform: translate(-50%, -50%);
+    text-align: center;
   }
   .links {
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
