--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1178,8 +1178,10 @@ footer ul li a {
   left: 50%;
   color: white;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 #fleet-upper .links {
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
