number added to startline

--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -30,6 +30,7 @@
     </div>
   </section>
   <section id="cars">
+      <h4 class="text-center">{% trans "All cars are real and from our fleet" %}</h4>
     <div class="custom-container">
         <div class="row row-gap-5">
             {% for car in cars %}
