--- a/promotion/templates/tours.html
+++ b/promotion/templates/tours.html
@@ -16,9 +16,10 @@
 
     <main>
       <section id="tours-upper">
-        <img src="{% static "assets/tour-bg.webp" %}" alt="" />
+        <img src="{% static "assets/tourmain.jpg" %}" alt="" />
         <div class="content">
           <h1>{% trans "Private Transfers&Tours" %}</h1>
+          <h5>{% trans "All photos are real" %}</h5>
         </div>
       </section>
       <section id="tours-info">
