--- a/static/styles/_fleet.scss
+++ b/static/styles/_fleet.scss
@@ -13,6 +13,7 @@
     color: white;
     transform: translate(-50%, -50%);
     text-align: center;
+   
   }
   .links {
     text-align: center;
@@ -34,6 +35,9 @@
 
 #cars {
   padding: 50px 0px;
+  h4{
+    margin-bottom: 50px;
+  }
   .custom-container {
     width: 90%;
     margin: auto;
