--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1135,6 +1135,10 @@ footer ul li a {
 #blog-detail .content .custom-flex {
   display: flex;
 }
+#blog-detail .content .custom-flex .tags {
+  flex-wrap: wrap;
+  gap: 10px;
+}
 #blog-detail .content .custom-flex .tags .tag-box {
   cursor: pointer;
   background-color: #0a4e8c;
@@ -1199,6 +1203,9 @@ footer ul li a {
 
 #cars {
   padding: 50px 0px;
+}
+#cars h4 {
+  margin-bottom: 50px;
 }
 #cars .custom-container {
   width: 90%;
@@ -1427,7 +1434,7 @@ footer ul li a {
 }
 #tours-upper img {
   width: 100%;
-  height: 400px;
+  height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
   filter: brightness(50%);
@@ -1439,6 +1446,9 @@ footer ul li a {
   color: white;
   transform: translate(-50%, -50%);
   text-align: center;
+}
+#tours-upper .content h5 {
+  margin-top: 15px;
 }
 
 #tours-info {
@@ -1506,7 +1516,8 @@ footer ul li a {
 #tours-info .tourbytour .swiper .box .content .tour-info {
   padding: 10px 0px;
   font-size: 13px;
-  color: gray;
+  color: #5191fa;
+  font-weight: 600;
 }
 #tours-info .tourbytour .swiper .swiper-pagination {
   position: absolute;
@@ -1525,7 +1536,7 @@ footer ul li a {
   transition: background-color 0.2s ease-in-out;
 }
 #tours-info .tourbytour .swiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: blue;
+  background-color: #5191fa;
   opacity: 1;
 }
 #tours-info .tourbytour .swiper .swiper-button-prev,
